--- a/de12/5.html
+++ b/de12/5.html
@@ -111,7 +111,7 @@
   <div>
     できませんでしたで終わるのは普通に悔しいので、期限過ぎたけど、できるところまではやろうと思います。まぁ、誰にも見られることはないのでしょうが。<br>
 
-    ps.課題よりも、みなとみらい祭の準備が大変でした。実行委員会の皆様、お疲れ様でした。
+    ps.課題よりも、みなとみらい祭の準備・後片付けが大変でした。実行委員会の皆様、お疲れ様でした。
   </div>
 </div>
 </body>
