--- a/digi_fab/fa2.html
+++ b/digi_fab/fa2.html
@@ -12,11 +12,64 @@
 <body>
   <header class="header-de12">
     <div class="header-text">
-        <h1>第2回　レーザーカッティング</h1>
+        <h1>第2回　和を感じるランプシェード</h1>
     </div>
 </header>
 <div class="main-de12">
-  <h1>aa</h1>
+  <div>
+  <h2>はじめに</h2>
+  今回は、レーザーカッターを用いて、MDFでランプシェードを制作しました。
+  </div>
+<div>
+ <h2>なぜランプシェードなのか？</h2>
+ 最近、ニトリで置き型照明を買ったのですが、電球が丸見えのタイプで、ランプシェードがあっても良いのではと思ったから。<br>
+ <img src="./images/IMG_9618.jpg"><br>
+ こんな感じのやつ。雰囲気良い感じ。おすすめです。
+</div>
+<div>
+  <h2>構想段階のスケッチ</h2>
+  <img src="./images/IMG_9617.jpg"><br>
+  はじめは、円型や六角形のランプシェードを作ろうと思っていましたが、どうあがいても材料が足りないと判断しました。<br>
+  したがって、今回はランプの前面のみ覆う形で制作します。<br>
+
+  個人的な考えなのですが、ランプシェードは洋風なイメージで、ランプシェードに和の要素を取り入れてみたら面白そうだと思い、<br>
+  日本の伝統的な柄をレーザーカッティングしようと思いました。
+</div>
+
+<div>
+  <h3>レーザーカットしたものがこちら</h3>
+  <img src="./images/IMG_9581.jpg"><br>
+  左から、「青海波」・「七宝文様」・「なんとなく開けた穴」です<br>
+  <a href="./dxf/青海波1.dxf">青海波dxf</a><br><a href="./dxf/七宝.dxf">七宝文様dxf</a><br><a href="./dxf/丸.dxf">丸dxf</a><br>
+  <img src="./images/名称未設定のデザイン (3) (1).png"><img src="./images/名称未設定のデザイン (4) (1).png"><img src="./images/名称未設定のデザイン (9) (1).png"><br>
+  画像を直接dxf化し、fusion360で微調整しました。<a href="https://anyconv.com/ja/png-to-dxf-konbata/"target="_blank">anyconv</a>
+</div>
+<div>
+  出来上がったものの裏に和紙を貼ります。<br>
+  <img src="./images/IMG_9620.jpg">
+</div>
+<div>
+  ランプの前に置きます。<br>
+  <img src="./images/IMG_9602.jpg"><br>
+  実際に照明の電源を入れてみます。<br>
+  <img src="./images/IMG_9604.jpg"><br>
+  良い感じです。<br>(接合部分には接着剤を使わない方法を考えていましたが、木の端に余裕がなく、良い具合に溝が作れないのに加え、<br>
+  見た目の問題もあり、今回は接着剤で無理やり木と木を接合しています。)
+</div>
+
+<div>
+  <h4>動画</h4>
+</div>
+
+<div>
+  <h2>まとめ</h2>
+  人間の心を動かすには、視覚や聴覚、味覚や嗅覚などといった、感覚に訴えかける必要があり、今回制作したランプシェードは視覚的に訴える力がある。<br>
+  反省点としては、木の接合部をより工夫できたら良かったと思う。また、イラストレーターでレーザーカット用のデータを作る際、<br>
+  誤って長辺をいじってしまい、それに気づかずカットしてしまった為、3つの木材のサイズに若干のばらつきが生じた。<br>
+  
   
 </div>
+
+</div>
+
 </body>
