--- a/digi_fab/fa2.html
+++ b/digi_fab/fa2.html
@@ -59,6 +59,7 @@
 
 <div>
   <h4>動画</h4>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ENGcL403naM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <div>
