--- a/digi_fab/fa2.html
+++ b/digi_fab/fa2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-    <title>あみくら　第5回</title>
+    <title>あみくら レーザーカット</title>
 
     <link rel="stylesheet" href="./css.homework/style.css">
     
