--- a/de12/6.html
+++ b/de12/6.html
@@ -16,7 +16,15 @@
     </div>
 </header>
 <div class="main-de12">
-  <h2>みなとみらいキャンパスに近い（30分以内）且つ、家賃抑えめが多い駅</h2>
-</div>
+  <h2>神大生におすすめの駅</h2>
 
+<div>
+  <h3>私達の班は、新しく神奈川大学に入学した、動物好きな女子をターゲットに、おすすめの物件を紹介します。</h3>
+</div>
+<div>
+  以下の路線別物件数の画像を見ると、京急本線が一番多い事がわかりました。
+  <img src="./images/スクリーンショット 2022-11-15 132500.png">
+</div>
+<a href="./5班　賃貸分析.pdf">っっｋ</a>
+</div>
 </body>
