--- a/de12/7.html
+++ b/de12/7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-    <title>あみくら　第6回</title>
+    <title>あみくら　第7回</title>
 
     <link rel="stylesheet" href="./css homework/style.css">
     
@@ -12,17 +12,16 @@
 <body>
   <header class="header-de12">
     <div class="header-text">
-        <h1>第6回　賃貸情報を分析しよう！</h1>
+        <h1>第7回　発表</h1>
     </div>
 </header>
-<div class="main-de12">
+<div class="main-de123">
   <h2>神大生におすすめの駅</h2>
 
 <div>
   <h3>私達の班は、新しく神奈川大学に入学した、動物好きな女子をターゲットに、おすすめの物件を紹介します。</h3>
 </div>
 <div>
-  以下の路線別物件数の画像を見ると、京急本線が一番多い事がわかりました。
-  <img src="./images/スクリーンショット 2022-11-15 132500.png">
+  <h1><a href="./5班　賃貸分析.pdf">PDFファイルはこちらから</a></h1>
 </div>
 </body>
