--- a/index.html
+++ b/index.html
@@ -142,5 +142,8 @@
     crossorigin="anonymous"></script>
 
 <script src="./jquery.js"></script>
+<script>
+  luxy.init();
+</script>
 </body>
 </html>
