--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
   crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
-
+<script src="main.js"></script>
 
 
 </head>
@@ -122,11 +122,6 @@
           </div>
           </div>
           </section>
-        
-      
-          <script>
-            luxy.init();
-          </script>
       </div><!--/luxy-->    
       </div>
     </main>
