--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
     src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
     crossorigin="anonymous"></script>
-
+    <script src="./luxy.min.js" charset="utf-8"></script>
+<script charset="utf-8">
+    luxy.init();
+</script>
 <script src="./jquery.js"></script>
 </body>
 </html>
