--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="area3">
           <div class="box luxy-el" data-horizontal="10" data-speed-y="-4">
           <h2 class="fuwa2">更新予定</h2>
-            <p>※今後更新しますーーーーーーーーーーーーーーーーーー</p>
+            <p>※今後更新します　　　　　　　　　　　　　　　　　　　　　　　</p>
           </div>
           </div>
           </div>
