--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
         </section>
         </a>
 
+        <!--科目追加はここから-->
+
         
         <section class="area">
           <div class="roding">
