--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="area1">
         <div class="area1text">
         <div class="box luxy-el">
-          <h2 class="fuwa1">１年後期：デザイン演習Ⅰ・Ⅱ</h2>
+          <h2 class="fuwa1">１年後期:デザイン演習Ⅰ・Ⅱ</h2>
           <p>文化人類学的な観察力と共感力、オープンイノベーションに参加する為の<br>基礎的なデジタル技術を会得する</p>
         </div>
         </div>
