--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section class="area">
         <div class="defaarea">
         <div class="defaimg">
-        <figure class="luxy-el" data-horizontal="-10" data-speed-y="-2"><img class="defaimg" src="./images/shutterstock_428931094 (1).jpg"></figure>
+        <figure class="luxy-el" data-horizontal="-10" data-speed-y="-2"><img class="defaimg" src="./images/画像1.jpg"></figure>
         </div>
         <div class="area2">
         <div class="box luxy-el" data-speed-y="-5">
