--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="area2">
         <div class="box luxy-el" data-speed-y="-5">
         <h2 class="fuwa2">１学年後期：デジタルファブリケーション</h2>
-          <p>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを扱えるようにす</p>
+          <p>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを扱えるようにする</p>
         </div>
         </div>
         </div>
