--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div id="luxy">
         <a href="./de12/index.html"target="_blank">
         <section class="area">
-        <figure class="luxy-el" data-speed-y="8" data-offset="10"><img class="de12img" src="./images/wysiwyg_2369faa3776d650187d8 (1).jpg" alt=""></figure>
+        <figure class="luxy-el" data-speed-y="8" data-offset="10"><img class="de12img" src="./images/1263610094-code-820275_1920-82y3-1920x1280-MM-100.jpg" alt=""></figure>
         <div class="area1">
         <div class="area1text">
         <div class="box luxy-el">
@@ -96,10 +96,10 @@
         <section class="area">
         <div class="defaarea">
         <div class="defaimg">
-        <figure class="luxy-el" data-horizontal="-10" data-speed-y="-2"><img class="defaimg" src="./images/画像1.jpg"></figure>
+        <figure class="luxy-el" data-horizontal="-10" data-speed-y="-2"><img class="defaimg" src="./images/mh3UOSdaoOcj67v1669367160_1669367185.jpg"></figure>
         </div>
         <div class="area2">
-        <div class="box luxy-el" data-speed-y="-5">
+        <div class="box luxy-el" data-speed-y="-3">
         <h2 class="fuwa2">１学年後期：デジタルファブリケーション</h2>
           <p>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを扱えるようにする</p>
         </div>
@@ -117,7 +117,7 @@
           <figure class="luxy-el" data-horizontal="100" data-speed-y="-2"><img class="rode" src="./images/reload-icon01_1200x630.png"></figure>
           </div>
           <div class="area3">
-          <div class="box luxy-el" data-horizontal="10" data-speed-y="-4">
+          <div class="box luxy-el" data-horizontal="10" data-speed-y="0">
           <h2 class="fuwa2">更新予定</h2>
             <p>※今後更新します　　　　　　　　　　　　　　　　　　　　　　　</p>
           </div>
