--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     <div class="contents">
       <p>
           <span class="slide-in leftAnime">
-          <span class="slide-in_inner">CONTENTSー</span>
+            <div class="line">
+          <span class="slide-in_inner">CONTENTS</span>
+            </div>
           </span>
           </p>
     </div>
