--- a/digi_fab/fa4.html
+++ b/digi_fab/fa4.html
@@ -83,6 +83,10 @@
   </div>
   <div>
     <h3>・同じ班のメンバーのDesign for Othersのページへのリンク</h3>
+    <a href="https://miru25.github.io/xbp/digi_fab/df4.html">ミル</a><br>
+    <a href="https://tanetaro.github.io/xbp/digi_fab/Design%20for%20Others.html">たねたろー</a><br>
+    <a href="https://ayana-7.github.io/xbp/digi_fab/index.html">ayana-7</a><br>
+    <a href="https://krnnn.github.io/xbp/digi_fab/index.html">かりん</a><br>
   </div>
 
 
