--- a/digi_fab/fa4.html
+++ b/digi_fab/fa4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-    <title>あみくら　観察課題</title>
+    <title>あみくら　DfO</title>
 
     <link rel="stylesheet" href="./css.homework/style.css">
     
