--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 <body>
     <header class="header">
         <div class="header-inner">
-        <a class="header img" href="./index.html">
+        <a class="header img">
+          <div class="xxx"><a href="./index.html">
             <img src="./images/0_XBlogo.png" alt="XBPロゴ">
+          </div>
         </a>
         </div>
     </header>
