--- a/digi_fab/fa5.html
+++ b/digi_fab/fa5.html
@@ -25,7 +25,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/SkwBZ7YP8no" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="gear">
-    <h1>ー参考サイト・動画ー</h1>
+    <h1>ー参考サイト・動画（記載途中）ー</h1>
     <h2>Fusion360で歯車を作る</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/fEFBxSfHgyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <h2>ラックギアの作り方</h2>
