--- a/digi_fab/fa5.html
+++ b/digi_fab/fa5.html
@@ -24,6 +24,16 @@
     <h1>ー動画ー</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/SkwBZ7YP8no" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
+  <div>
+    <h1>ーstlファイルー</h1>
+    <h3>何かに使えそうだったら使ってください</h3><br>
+    <img src="./images/スクリーンショット 2023-01-18 221535.png"><br>
+    <a href="./Bbevelgear.stl">ベベルギア大ダウンロード</a><br>
+    <a href="./Sbevelgear.stl">ベベルギア小ダウンロード</a><br>
+    <img src="./images/スクリーンショット 2023-01-18 221746.png"><br>
+    <a href="./lack.stl">ラックダウンロード</a><br>
+    <a href="./lackgear.stl">ラックギアダウンロード</a><br>
+  </div>
   <div class="gear">
     <h1>ー参考サイト・動画（記載途中）ー</h1>
     <h2>Fusion360で歯車を作る</h2>
