--- a/digi_fab/fa4.html
+++ b/digi_fab/fa4.html
@@ -89,6 +89,11 @@
     <a href="https://krnnn.github.io/xbp/digi_fab/index.html">かりん</a><br>
   </div>
 
+  <div>
+    <h3>・最終課題</h3>
+    <a href="./fa5.html"target="_blank"><h4>完成しました。</h4></a>  <h3></h3>
+  </div>
+
 
 
 
