--- a/index.html
+++ b/index.html
@@ -114,6 +114,40 @@
 
         <!--科目追加はここから-->
 
+        <a href="./de34/index.html"target="_blank">
+          <section class="area">
+          <div class="defaarea">
+          <div class="defaimg">
+          <figure class="luxy-el" data-horizontal="-20" data-speed-y="-1"><img class="defaimg" src="./images/mh3UOSdaoOcj67v1669367160_1669367185.jpg"></figure>
+          </div>
+          <div class="area2">
+          <div class="box luxy-el" data-speed-y="-3">
+          <h2 class="fuwa2">2学年前記：デザイン演習Ⅲ・Ⅳ</h2>
+            <p>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを扱えるようにする</p>
+          </div>
+          </div>
+          </div>
+          </section>
+          </a>
+
+
+          <a href="./de56/index.html"target="_blank">
+            <section class="area">
+            <div class="defaarea">
+            <div class="defaimg">
+            <figure class="luxy-el" data-horizontal="-3" data-speed-y="-1"><img class="defaimg" src="./images/mh3UOSdaoOcj67v1669367160_1669367185.jpg"></figure>
+            </div>
+            <div class="area2">
+            <div class="box luxy-el" data-speed-y="-3">
+            <h2 class="fuwa2">2学年前記：デザイン演習Ⅴ・Ⅵ</h2>
+              <p>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを扱えるようにする</p>
+            </div>
+            </div>
+            </div>
+            </section>
+            </a>
+  
+
         
         <section class="area">
           <div class="roding">
