--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <section class="area">
           <div class="defaarea">
           <div class="defaimg">
-          <figure class="luxy-el" data-horizontal="-20" data-speed-y="-1"><img class="defaimg" src="./de34/images/maicon.jpg"></figure>
+          <figure class="luxy-el" data-horizontal="-20" data-speed-y="-1"><img class="de34img" src="./de34/images/maicon.jpg"></figure>
           </div>
           <div class="area2">
           <div class="box luxy-el" data-speed-y="-1">
@@ -135,10 +135,10 @@
             <section class="area">
             <div class="defaarea">
             <div class="defaimg">
-            <figure class="luxy-el" data-horizontal="-3" data-speed-y="-1"><img class="defaimg" src="./images/mh3UOSdaoOcj67v1669367160_1669367185.jpg"></figure>
+            <figure class="luxy-el" data-horizontal="-1" data-speed-y="-1"><img class="de56img" src="./de56/images/bissiness.jpg"></figure>
             </div>
             <div class="area2">
-            <div class="box luxy-el" data-speed-y="-3">
+            <div class="box luxy-el" data-speed-y="0">
             <h2 class="fuwa2">2学年前記：デザイン演習Ⅴ・Ⅵ</h2>
               <p>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを扱えるようにする</p>
             </div>
