--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="area2">
           <div class="box luxy-el" data-speed-y="-1">
           <h2 class="fuwa2">2学年前期：デザイン演習Ⅲ・Ⅳ</h2>
-            <p>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを扱えるようにする</p>
+            <p>ーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー</p>
           </div>
           </div>
           </div>
@@ -140,7 +140,7 @@
             <div class="area2">
             <div class="box luxy-el" data-speed-y="0">
             <h2 class="fuwa2">2学年前期：デザイン演習Ⅴ・Ⅵ</h2>
-              <p>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを扱えるようにする</p>
+              <p>ーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー</p>
             </div>
             </div>
             </div>
