--- a/de34/index.html
+++ b/de34/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>XBP_HP</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../de34/de34css/style.css">
     <link rel="shortcut icon" href="./images/xbp.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
