--- a/de34/de1.html
+++ b/de34/de1.html
@@ -40,6 +40,9 @@
         <img src="./images/Image (002).jpeg">
         <div>今日の天気と気温から、コーディネートを考えてくれるサービス。考えるのはめんどくさいけど、それなりに身だしなみは整えたいときにぴったり。<br>
         自分の持っている服を登録するのが大変だが、一度登録してしまえばAIがその日その日に合わせたコーディネートを考えてくれる。</div>
+
+        <h2>ー マイコンボード（Arduino）の体験 ー</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-hQ4OppVAWA?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     
 
     </div>
