--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
             <p class="EA">Extracurricular Activities</p>
             
             <li>
-                <a href="./de12/index.html"target="_blank"><img class="de12img" src="./images/comingsoon.png"></a>
+                <img class="de12img" src="./images/comingsoon.png"></a>
                 <dl>
                     <dt>更新予定</dt>
                     <dd></dd>
                 </dl>
             </li>
             <li>
-                <a href="./digi_fab/index.html"target="_blank"><img class="defaimg" src="./images/comingsoon.png"></a>
+                <img class="defaimg" src="./images/comingsoon.png"></a>
                 <dl>
                     <dt>更新予定</dt>
                     <dd></dd>
                 </dl>
             </li>
             <li>
-                <a href="./de34/index.html"target="_blank"><img class="de34img" src="./images/comingsoon.png"></a>
+                <img class="de34img" src="./images/comingsoon.png"></a>
                 <dl>
                     <dt>更新予定</dt>
                     <dd></dd>
                 </dl>
             </li>
             <li>
-                <a href="./de56/index.html"target="_blank"><img class="de56img" src="./images/comingsoon.png"></a>
+                <img class="de56img" src="./images/comingsoon.png"></a>
                 <dl>
                     <dt>更新予定</dt>
                     <dd></dd>
