--- a/de34/de4.html
+++ b/de34/de4.html
@@ -18,6 +18,7 @@
         <h2>ーグループワークー</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/TG-e-EdiS9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p>モータに鶴をくっつけて、ひたすら回転させました。なにをやっているのでしょう。僕にもわかりません。</p>
+        <p>共同制作：<a href="https://hidemasa0222.github.io/xbp/">ひで</a></p>
     </div>
         
 </body>
