--- a/index.html
+++ b/index.html
@@ -109,11 +109,13 @@
             <p class="EA">Extracurricular Activities</p>
             
             <li>
-                <img class="de12img" src="./images/comingsoon.png"></a>
+                <a href="https://www.seads.info/">
+                <img class="seads" src="./images/seads_logo2.png"></a>
                 <dl>
-                    <dt>更新予定</dt>
-                    <dd></dd>
+                    <dt>学生団体 SEAds</dt>
+                    <dd>　since 2023/04/01</dd>
                 </dl>
+                </a>
             </li>
             <li>
                 <img class="defaimg" src="./images/comingsoon.png"></a>
