--- a/de34/index.html
+++ b/de34/index.html
@@ -32,6 +32,7 @@
                          <li><a href="./de2.html"target="_blank">ー第2回ー</a></li>
                          <li><a href="./de3.html"target="_blank">ー第3回ー</a></li>
                          <li><a href="./de4.html"target="_blank">ー第4回ー</a></li>
+                         <li><a href="./project_note.html"target="_blank">プロジェクトノート</a></li>
 
                     </ul>
                 </div>
