--- a/de34/project_note.html
+++ b/de34/project_note.html
@@ -15,7 +15,7 @@
   
     <div class="main-de34">
 
-       <h1><a href="https://tanetaro.github.io/xbp/de34/6.html">たねたろー</a></h1>
+       <h1><a href="https://tanetaro.github.io/xbp/de34/6.html">たねたろー 111</a></h1>
     </div>
         
 </body>
