--- a/de56/index.html
+++ b/de56/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <logotohome>
-    <a href="../index.html"><img src="./images/0_XBlogo.png" alt=""></a>
+    <a href="../index.html"><img src="images/0_XBlogo.png" alt=""></a>
     </logotohome>
 
     <main class="main">
