--- a/de56/index.html
+++ b/de56/index.html
@@ -29,6 +29,7 @@
                     <ul>
                         
                          <li><a href="/de56/de56_1.html"target="_blank">ー第1回ー</a></li>
+                         <li><a href="./de56_1.html"target="_blank">ー第1回ー</a></li>
                     </ul>
                 </div>
         
