--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
 <body>
     <header class="header">
         <div class="header-inner">
-        <a class="header img" href="./index.html">
-            <img src="./images/0_XBlogo.png" alt="XBPロゴ">
-        </a>
+            <a class="header img" href="./index.html">
+                <img src="./images/0_XBlogo.png" alt="XBPロゴ">
+            </a>
         </div>
     </header>
+    
     
     <main class="main">
     <div class="first-view">
@@ -101,7 +102,7 @@
                 <a href="./de56/index.html"target="_blank"><img class="de56img" src="./images/bisinessman.png" alt="デザイン演習56画像"></a>
                 <dl>
                     <dt>デザイン演習Ⅴ・Ⅵ</dt>
-                    <dd></dd>
+                    <dd>アイディアや技術を社会の中で活かすための経営知識を扱い、ビジネスプランにまで落とし込む</dd>
                 </dl>
             </li>
         </ul>
