--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <a href="./de56/index.html"target="_blank"><img class="de56img" src="./images/bisinessman.png" alt="デザイン演習56画像"></a>
                 <dl>
                     <dt>デザイン演習Ⅴ・Ⅵ</dt>
-                    <dd>アイディアや技術を社会の中で活かすための経営知識を扱い、ビジネスプランにまで落とし込む</dd>
+                    <dd>アイディアや技術を社会の中で活かすための経営知識を扱い、ビジネスプランにまで落とし込む。</dd>
                 </dl>
             </li>
         </ul>
