--- a/de56/index.html
+++ b/de56/index.html
@@ -32,6 +32,8 @@
                          <li><a href="./56de1.html"target="_blank">ー第1回ー</a></li>
                          <li><a href="https://tanetaro.github.io/xbp/de56/2.html"target="_blank">ー第２回（たねたろー）ー</a></li>
                          <li><a href="./56de2.html"target="_blank">ー第３回ー</a></li>
+                         <li><a href="./56de3.html"target="_blank">ー第４回ー</a></li>
+                         
                          
                     </ul>
                 </div>
