--- a/de56/56de4.html
+++ b/de56/56de4.html
@@ -3,7 +3,7 @@
 <head>
     <title>あみくら　第４回</title>
 
-    <link rel="stylesheet" href="/de56/de56css/homework.css">
+    <link rel="stylesheet" href="/de56/de56css/homework1.css">
 
     <style>
         .pdf-viewer {
