--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
                 </a>
             </li>
             <li>
-                <img class="defaimg" src="./images/comingsoon.png"></a>
+                <a href="/process/webprocess/processtest.html">
+                <img class="proto" src="./images/comingsoon.png"></a>
                 <dl>
-                    <dt>更新予定</dt>
+                    <dt>色々試作</dt>
                     <dd></dd>
                 </dl>
             </li>
