--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <a href="/process/webprocess/processtest.html">
                 <img class="proto" src="./images/comingsoon.png"></a>
                 <dl>
-                    <dt>色々試作</dt>
+                    <dt>色々試</dt>
                     <dd></dd>
                 </dl>
             </li>
