--- a/de56/56de2.html
+++ b/de56/56de2.html
@@ -3,7 +3,7 @@
 <head>
     <title>あみくら　第３回</title>
 
-    <link rel="stylesheet" href="/de56/de56css/homework.css">
+    <link rel="stylesheet" href="./de56css/56homework.css">
 
 </head>
 <body>
