--- a/de56/index.html
+++ b/de56/index.html
@@ -34,6 +34,7 @@
                          <li><a href="./56de2.html"target="_blank">ー第3回ー</a></li>
                          <li><a href="./56de3.html"target="_blank">ー第4回ー</a></li>
                          <li><a href="./56de4.html"target="_blank">ー第5回ー</a></li>
+                         <li><a href="./56de5.html"target="_blank">ー第6回ー</a></li>
                          
                          
                     </ul>
