--- a/de56/56de5.html
+++ b/de56/56de5.html
@@ -5,7 +5,6 @@
 
     <link rel="stylesheet" href="./de56css/56homework.css">
 
-
 </head>
 <body>
     <header class="header-de56">
@@ -16,7 +15,7 @@
   
     <div class="main-de56">
 
-        <a href="https://kanagawau-my.sharepoint.com/:x:/g/personal/r202201963id_jindai_jp/ESw2Cw2NjqBIrz59BbaeYNEBv8CIAzeGISycTy9JvJvcrA?e=8Lb0eN"></a>
+        <img src="./images/ 2023-11-27 16.25.53.png">
 
     </div>
     
