--- a/de56/56de5.html
+++ b/de56/56de5.html
@@ -15,7 +15,7 @@
   
     <div class="main-de56">
 
-        <img width="1000" height="456" src="./images/ 2023-11-27 16.25.53.png">
+        <img src="./images/ 2023-11-27 16.25.53.png">
 
     </div>
     
