--- a/de56/index.html
+++ b/de56/index.html
@@ -35,6 +35,7 @@
                          <li><a href="./56de3.html"target="_blank">ー第4回ー</a></li>
                          <li><a href="./56de4.html"target="_blank">ー第5回ー</a></li>
                          <li><a href="./56de5.html"target="_blank">ー第6回ー</a></li>
+                         <li><a href="https://hidemasa0222.github.io/xbp/de56/dainanakai.html"target="_blank">ー第7回（ひで）ー</a></li>
                          
                          
                     </ul>
