--- a/de56/56de6.html
+++ b/de56/56de6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-    <title>あみくら　第5回</title>
+    <title>あみくら　第6回</title>
 
     <link rel="stylesheet" href="./de56css/56homework.css">
 
@@ -9,13 +9,13 @@
 <body>
     <header class="header-de56">
         <div class="header-text">
-            <h1>事業計画書</h1>
+            <h1>中間発表</h1>
         </div>
     </header>
   
     <div class="main-de56">
 
-        
+        <img src="./images/presentation.pdf">
 
 
     </div>
