--- a/de56/index.html
+++ b/de56/index.html
@@ -33,6 +33,7 @@
                          <li><a href="https://tanetaro.github.io/xbp/de56/2.html"target="_blank">ー第２回（たねたろー）ー</a></li>
                          <li><a href="./56de2.html"target="_blank">ー第3回ー</a></li>
                          <li><a href="./56de3.html"target="_blank">ー第4回ー</a></li>
+                         <li><a href="./56de6.html"target="_blank">ー中間発表ー</a></li>
                          <li><a href="./56de4.html"target="_blank">ー第5回ー</a></li>
                          <li><a href="./56de5.html"target="_blank">ー第6回ー</a></li>
                          <li><a href="https://hidemasa0222.github.io/xbp/de56/dainanakai.html"target="_blank">ー第7回（ひで）ー</a></li>
