--- a/de56/56de6.html
+++ b/de56/56de6.html
@@ -4,7 +4,13 @@
     <title>あみくら　第6回</title>
 
     <link rel="stylesheet" href="./de56css/56homework.css">
-
+    <style>
+        .pdf-viewer {
+            width: 100%;
+            height: 800px;
+            border: none;
+        }
+    </style>
 </head>
 <body>
     <header class="header-de56">
@@ -14,8 +20,7 @@
     </header>
   
     <div class="main-de56">
-
-        <img src="./images/presentation.pdf">
+        <iframe class="pdf-viewer" src="./images/presentation.pdf"></iframe>
 
 
     </div>
