--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </a>
             </li>
             <li>
-                <a href="./process/webprocess/processtest copy.html">
+                <a href="./cheatclass/chindex.html">
                 <img class="proto" src="./images/comingsoon.png"></a>
                 <dl>
                     <dt>色々</dt>
