--- a/cheatclass/chindex.html
+++ b/cheatclass/chindex.html
@@ -14,6 +14,10 @@
 
     <p>保存されたテキスト:</p>
     <textarea id="saved-text" rows="15" disabled></textarea>
+    <button id="copy-btn">テキストをコピーして過去の内容に移動</button>
+
+    <p>過去の内容:</p>
+    <textarea id="past-contents" rows="15" disabled></textarea>
 
     <script src="./javascript/chscript.js"></script>
 </body>
