--- a/cheatclass/chindex.html
+++ b/cheatclass/chindex.html
@@ -8,6 +8,7 @@
 <body>
     <button id="start-btn">音声認識を開始</button>
     <button id="stop-btn">音声認識を停止</button>
+    <button id="reset-btn">リセット</button> <!-- リセットボタン -->
 
     <p>リアルタイム音声出力:</p>
     <textarea id="realtime-output" rows="10" disabled></textarea>
