--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 </a>
             </li>
             <li>
-                <a href="./cheatclass/chindex.html">
+                <a href="./helpme/chindex.html">
                 <img class="proto" src="./images/comingsoon.png"></a>
                 <dl>
-                    <dt>色々</dt>
+                    <dt>講義を要約</dt>
                     <dd></dd>
                 </dl>
             </li>
