--- a/helpme/chindex.html
+++ b/helpme/chindex.html
@@ -13,11 +13,11 @@
     <p>リアルタイム音声出力:</p>
     <textarea id="realtime-output" rows="10" disabled></textarea>
 
-    <p>保存されたテキスト(2000文字 chatGPTで要約):</p>
+    <p>保存されたテキスト(2000文字に達すると自動で移動します。コピーしてchatGPTで要約してください):</p>
     <textarea id="saved-text" rows="15" disabled></textarea>
     <button id="copy-btn">テキストをコピーして過去の内容に移動</button>
 
-    <p>過去の内容:</p>
+    <p>過去の内容（コピーされたテキストは全てこのテキストボックスに移動します）:</p>
     <textarea id="past-contents" rows="15" disabled></textarea>
 
     <script src="./javascript/chscript.js"></script>
