--- a/helpme/chindex.html
+++ b/helpme/chindex.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./css/chstyle.css">
 </head>
 <body>
+    <h3>使い方</h3>
+    <p></p>
     <button id="start-btn">音声認識を開始</button>
     <button id="stop-btn">音声認識を停止</button>
     <button id="reset-btn">リセット</button> <!-- リセットボタン -->
