--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </a>
             </li>
             <li>
-                <a href="./helpme/chindex.html">
+                <a href="./helpme/cheindex.html">
                 <img class="proto" src="./images/comingsoon.png"></a>
                 <dl>
                     <dt>講義を要約</dt>
