--- a/helpme/cheindex.html
+++ b/helpme/cheindex.html
@@ -13,7 +13,7 @@
     <p>リアルタイム音声出力:</p>
     <textarea id="realtime-output" rows="10" disabled></textarea>
 
-    <p>保存されたテキスト(2000文字に達すると自動で移動します。コピーしてchatGPTで要約してください):</p>
+    <p>要約待ちのテキスト(2000文字に達すると自動で移動します。コピーしてchatGPTで要約してください):</p>
     <textarea id="saved-text" rows="15" disabled></textarea>
     <button id="copy-btn">テキストをコピーして過去の内容に移動</button>
 
