--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
                 </dl>
             </li>
             <li>
-                <img class="de34img" src="./images/comingsoon.png"></a>
+                <a href="./doyolab/index.html"></a>
+                <img class="doyolab" src="./images/comingsoon.png"></a>
                 <dl>
-                    <dt>更新予定</dt>
+                    <dt>道用ゼミ</dt>
                     <dd></dd>
                 </dl>
             </li>
