--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </dl>
             </li>
             <li>
-                <a href="./doyolab/index.html"></a>
+                <a href="./doyolab/index.html">
                 <img class="doyolab" src="./images/comingsoon.png"></a>
                 <dl>
                     <dt>道用ゼミ</dt>
