--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 
 </head>
 <body>
+    <div id="volunteerModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h2>ワークショップボランティア募集！</h2>
+          <p>親子向けものづくりワークショップのお手伝いを募集しています！</p>
+          <button onclick="location.href='volunteer.html'">詳しくはこちら</button>
+        </div>
+      </div>
     <header class="header">
         <div class="header-inner">
             <a class="header img" href="./index.html">
@@ -151,5 +159,7 @@
     crossorigin="anonymous"></script>
 
 <script src="./jquery.js"></script>
+<script src="./index.js"></script>
+
 </body>
 </html>
