--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <span class="close">&times;</span>
           <h2>ワークショップボランティア募集！</h2>
           <p>親子向けものづくりワークショップのお手伝いを募集しています！</p>
-          <button onclick="location.href='https://forms.gle/hpYhKfaebaSNXVYHA'">詳しくはこちら</button>
+          <button onclick="location.href='https://forms.gle/hpYhKfaebaSNXVYHA'">お申し込みはこちら</button>
         </div>
       </div>
     <header class="header">
