--- a/index.html
+++ b/index.html
@@ -143,9 +143,10 @@
                 </dl>
             </li>
             <li>
+                <a href="./childportfolio/poindex.html"></a>
                 <img class="de56img" src="./images/comingsoon.png"></a>
                 <dl>
-                    <dt>更新予定</dt>
+                    <dt>ポートフォリオテスト</dt>
                     <dd></dd>
                 </dl>
             </li>
