--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </dl>
             </li>
             <li>
-                <a href="./childportfolio/poindex.html"></a>
+                <a href="./childportfolio/poindex.html">
                 <img class="de56img" src="./images/comingsoon.png"></a>
                 <dl>
                     <dt>ポートフォリオテスト</dt>
