--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
                     <dd></dd>
                 </dl>
             </li>
+            <li>
+                <a href="./chatGPTtest/MP3/mp3index.html">
+                <img class="de56img" src="./images/comingsoon.png"></a>
+                <dl>
+                    <dt>オーディオビジュアライザー</dt>
+                    <dd></dd>
+                </dl>
+            </li>
         </ul>
             
     </div>
