--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </li>
             <li>
                 <a href="./helpme/cheindex.html">
-                <img class="proto" src="./images/DALL·E 2024-04-16 13.53.27 - A middle-aged Asian man sitting at a desk, concentrating as he summarizes a lecture. He has short black hair and wears glasses. The desk is cluttered .webp"></a>
+                <img class="proto" src="./images/samlec.webp"></a>
                 <dl>
                     <dt>講義を要約</dt>
                     <dd></dd>
