--- a/helpme/cheindex.html
+++ b/helpme/cheindex.html
@@ -14,12 +14,12 @@
     <p>リアルタイム音声出力</p>
     <textarea id="realtime-output" rows="10" disabled></textarea>
 
-    <p>要約待ちのテキスト(2000文字に達すると自動で移動します。コピーしてchatGPTで要約してください)</p>
-    <textarea id="saved-text" rows="15" disabled></textarea>
+    <p>要約待ちのテキスト(2000文字に達すると自動で移動します。コピーしてchatGPTで要約してください。文字の修正はここで。)</p>
+    <textarea id="saved-text" rows="15"></textarea>
     <button id="copy-btn">テキストをコピーして<br>過去の内容に移動</button>
 
     <p>過去の内容（コピーされたテキストは全てこのテキストボックスに移動します）</p>
-    <textarea id="past-contents" rows="15" disabled></textarea>
+    <textarea id="past-contents" rows="15"></textarea>
 
     <script src="./javascript/chscript.js"></script>
 </body>
