--- a/helpme/cheindex.html
+++ b/helpme/cheindex.html
@@ -13,7 +13,7 @@
 </div>
 <div class="textareas-container">
     <div class="left-container">
-    <h4>リアルタイム音声出力</h4>
+    <h4>リアルタイム文字起こし</h4>
     <textarea id="realtime-output" rows="20" disabled></textarea>
     </div>
   
