--- a/helpme/cheindex.html
+++ b/helpme/cheindex.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>音声認識デモ</title>
+    <title>リアルタイム文字起こし</title>
     <link rel="stylesheet" href="./css/chstyle.css">
 </head>
 <body>
