--- a/helpme/cheindex.html
+++ b/helpme/cheindex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>リアルタイム文字起こし</title>
     <link rel="stylesheet" href="./css/chstyle.css">
+    <link rel="icon" href="./images/seadsicon.ico" type="image/x-icon">
 </head>
 <body>
 <div class="button-container">
