--- a/helpme/cheindex.html
+++ b/helpme/cheindex.html
@@ -33,6 +33,6 @@
     <textarea id="past-contents" rows="15"></textarea>
     </div>
 
-    <script src="./javascript/test.js"></script>
+    <script src="./javascript/chscript.js"></script>
 </body>
 </html>
