--- a/helpme/cheindex.html
+++ b/helpme/cheindex.html
@@ -11,7 +11,7 @@
     <button id="start-btn">音声認識を開始</button>
     <button id="stop-btn">音声認識を停止</button>
     <button id="reset-btn">リセット</button> <!-- リセットボタン -->
-    <button id="goto-name-management-btn"class="button-differentiated">固有名詞登録ページへ</button> <!-- 固有名詞登録ページへのボタン -->
+    <button id="goto-name-management-btn"class="button-differentiated">誤字修正登録ページへ</button> <!-- 固有名詞登録ページへのボタン -->
     
 </div>
 <div class="textareas-container">
