--- a/helpme/name-management.html
+++ b/helpme/name-management.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>固有名詞の入力（試験運用）</h1>
+        <h1>固有名詞の入力</h1>
         <div id="custom-names">
-            <input type="text" id="pronunciation" placeholder="固有名詞の読み方" class="input-box">
-            <input type="text" id="display-name" placeholder="固有名詞の表示名" class="input-box">
+            <input type="text" id="pronunciation" placeholder="修正前のテキスト" class="input-box">
+            <input type="text" id="display-name" placeholder="修正後のテキスト" class="input-box">
             <button id="add-name-btn" class="button">追加</button>
         </div>
 
-        <h2>登録された固有名詞</h2>
+        <h2>登録した単語一覧</h2>
         <div id="name-list" class="name-list"></div>
 
         <div class="action-buttons">
