--- a/helpme/name-management.html
+++ b/helpme/name-management.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
         <h1>固有名詞の入力</h1>
+        <p class="explain" >お名前やサービス名等の固有名詞は、基本的に誤って入力されます。<br>下のテキストボックスに追加することで修正が可能です。</p>
         <div id="custom-names">
             <input type="text" id="pronunciation" placeholder="修正前のテキスト" class="input-box">
             <input type="text" id="display-name" placeholder="修正後のテキスト" class="input-box">
